Prevent margin collapse

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,9 +10,11 @@
 
 html
     color-scheme: dark light
+    overflow: auto
 
 body
     min-height: 100vh
+    overflow: auto
 
 img, picture, svg, video
     display: block
